--- a/install
+++ b/install
@@ -16,9 +16,23 @@ log_step() {
     echo "======================================================================="
 }
 
+# --- Funções de Log ---
 log_success() {
-    echo "--- SUCESSO: $1 concluído."
+    echo -e "\n\e[1;32m[SUCESSO] $1\e[0m"
 }
+
+log_error() {
+    echo -e "\n\e[1;31m[ERRO] $1\e[0m" >&2
+}
+
+log_info() {
+   echo -e "\n\e[1;34m[INFO] $1\e[0m"
+}
+
+
+#log_success() {
+#    echo "--- SUCESSO: $1 concluído."
+#}
 
 # --- Funções de Instalação ---
 configure_apt_repositories() {
@@ -59,6 +73,7 @@ install_essential_packages() {
         vlc lame libdvd-pkg \
         gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly \
         python3-pip python3-venv
+        
         
     # Configura o libdvd-pkg de forma não interativa
     dpkg-reconfigure -fnoninteractive libdvd-pkg
