--- a/install
+++ b/install
@@ -50,7 +50,17 @@ configure_apt_repositories() {
     log_info "Fazendo backup do /etc/apt/sources.list..."
     cp /etc/apt/sources.list /etc/apt/sources.list.bak
     log_info "Adicionando componentes 'contrib', 'non-free' e 'non-free-firmware'..."
-    sed -i 's/ main$/ main contrib non-free non-free-firmware/' /etc/apt/sources.list
+
+# Esta é a forma robusta de adicionar os componentes ao sources.list.
+    # Itera sobre cada componente e o adiciona se ele não existir na linha do repositório.
+    local components=("contrib" "non-free" "non-free-firmware")
+    for comp in "${components[@]}"; do
+        log_info "Verificando e adicionando o componente: ${comp}..."
+        # Adiciona o componente às linhas que começam com "deb " e não possuem o componente.
+        sed -i "/^deb / { /${comp}/! s/$/ ${comp}/ }" /etc/apt/sources.list
+    done
+
+    
     log_info "Atualizando a lista de pacotes..."
     apt update
     log_success "Repositórios APT configurados."
