--- a/install
+++ b/install
@@ -51,14 +51,9 @@ configure_apt_repositories() {
     cp /etc/apt/sources.list /etc/apt/sources.list.bak
     log_info "Adicionando componentes 'contrib', 'non-free' e 'non-free-firmware'..."
 
-# Esta é a forma robusta de adicionar os componentes ao sources.list.
-    # Itera sobre cada componente e o adiciona se ele não existir na linha do repositório.
-    local components=("contrib" "non-free" "non-free-firmware")
-    for comp in "${components[@]}"; do
-        log_info "Verificando e adicionando o componente: ${comp}..."
-        # Adiciona o componente às linhas que começam com "deb " e não possuem o componente.
-        sed -i "/^deb / { /${comp}/! s/$/ ${comp}/ }" /etc/apt/sources.list
-    done
+ # Este comando 'sed' substitui de forma inteligente toda a seção de componentes
+    # nas linhas 'deb' e 'deb-src', garantindo a sequência correta.
+    sed -i -E 's#^(deb(-src)?\s+[^ ]+\s+[^ ]+)\s+.*#\1 main contrib non-free non-free-firmware#' /etc/apt/sources.list
 
     
     log_info "Atualizando a lista de pacotes..."
